Added the ability to create tabs. The folder structure is sections/<tab name>/<section>.md

--- a/css/main.css
+++ b/css/main.css
@@ -89,6 +89,16 @@ body
 
 /* Body Stuff */
 
+.tab-pane
+{
+    display: none;
+}
+
+.tab-pane.active
+{
+    display: block;
+}
+
 .tab-content a
 {
     color: #08c;
